--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -5107,11 +5107,10 @@ meter {
 }
 
 .main {
-  -webkit-box-flex: 1;
-  -webkit-flex-grow: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
-  width: 100%;
+ -webkit-box-flex: 1;
+    -ms-flex: 1 1 auto;
+    flex: 1 1 auto;
+    width: 100%;
   margin-top: 9.8125rem;
 }
 @media only screen and (max-width: 1200px) {
