--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -2792,7 +2792,7 @@ meter {
 }
 .card__picture {
   overflow: hidden;
-  height: 51%;
+  height: 53%;
 }
 @media only screen and (max-width: 767px) {
   .card__picture {
@@ -2941,30 +2941,30 @@ meter {
   height: 15rem;
   position: relative;
 }
+.card--bg:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: -webkit-gradient(linear, left top, right top, color-stop(20%, #F2F2F6), color-stop(70%, rgba(242, 244, 246, 0.4)));
+  background: linear-gradient(90deg, #F2F2F6 20%, rgba(242, 244, 246, 0.4) 70%);
+  z-index: 1;
+}
 @media only screen and (max-width: 767px) {
   .card--bg {
     padding: 3.125rem 1.875rem;
     height: 15.8125rem;
   }
-  .card--bg:before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: -webkit-gradient(linear, left bottom, left top, color-stop(1.02%, #F2F2F6), color-stop(80%, rgba(242, 244, 246, 0.8)));
-    background: linear-gradient(0deg, #F2F2F6 1.02%, rgba(242, 244, 246, 0.8) 80%);
-    z-index: 1;
-  }
 }
 .card--bg__content {
   width: 55%;
+  z-index: 10;
 }
 @media only screen and (max-width: 767px) {
   .card--bg__content {
     width: 100%;
-    z-index: 10;
   }
 }
 .card--bg__content-big {
@@ -3146,6 +3146,7 @@ meter {
   height: fit-content;
   min-height: 11.875rem;
   left: 0;
+  top: 2.8125rem;
   border-top: 2px solid #FFFFFF;
   border-radius: 0 0 0.625rem 0.625rem;
   opacity: 0;
@@ -3644,12 +3645,13 @@ meter {
   background-color: #F2F4F6;
   padding: 2.5rem;
   height: 15rem;
+  overflow: hidden;
   -webkit-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
 }
 @media only screen and (max-width: 767px) {
   .card-lab {
-    padding: 1.875rem;
+    padding: 1.875rem 0.9375rem;
     height: 13.4375rem;
   }
 }
@@ -3681,6 +3683,12 @@ meter {
 .card-lab__content {
   position: relative;
   z-index: 10;
+  overflow: hidden;
+  word-break: break-word;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 5;
+  text-overflow: ellipsis;
 }
 .card-lab__picture {
   pointer-events: none;
