--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -5183,6 +5183,11 @@ meter {
   min-width: 22.5rem;
   min-height: 100%;
 }
+@media only screen and (max-width: 767px) {
+  .main-container {
+    overflow-x: hidden;
+  }
+}
 
 .modal {
   border-radius: 10px !important;
