--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -1343,7 +1343,7 @@ meter {
   right: -25rem;
   background-color: #FFFFFF;
   padding: 3.75rem 1.25rem 2.1875rem;
-  border-radius: 0.625rem;
+  border-radius: 0 0 0 0.625rem;
   -webkit-box-shadow: -4px 8px 11px -2px rgba(0, 0, 0, 0.2);
   box-shadow: -4px 8px 11px -2px rgba(0, 0, 0, 0.2);
   -webkit-transition: right 1s ease-in-out;
@@ -1351,7 +1351,7 @@ meter {
 }
 @media only screen and (max-width: 767px) {
   .mob-menu__content {
-    top: 4.5rem;
+    top: 5.1875rem;
   }
 }
 .mob-menu__content.active {
